Mecanismes Items + bugfix

--- a/ToDo.txt
+++ b/ToDo.txt
@@ -9,4 +9,4 @@
 -Approfondissement maps, armes, objectifs, niveau de difficultés, modes de jeux +texture +sons
 -Interface
 
--TEST 2
+-fonction pour vérifier que tout les fichiers necessaires sont présents
